Tests fixed for dps-rest module